--- a/StoreFront.UI.MVC/Views/Products/Details.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/Details.cshtml
@@ -26,7 +26,7 @@
 
             <hr />
 
-            <div class="d-flex mb-3">
+            @*<div class="d-flex mb-3">
                 <div class="text-primary mr-2">
                     <small class="fas fa-star"></small>
                     <small class="fas fa-star"></small>
@@ -35,13 +35,13 @@
                     <small class="far fa-star"></small>
                 </div>
                 <small class="pt-1">(50 Reviews)</small>
-            </div>
+            </div>*@
             <h3 class="font-weight-semi-bold mb-4">@Model.ProductPrice.ToString("c")</h3>
             <p>@Html.DisplayNameFor(model => model.ProductDescription)</p>
             <p class="mb-4">@Html.DisplayFor(model => model.ProductDescription)</p>
 
             <div class="d-flex align-items-center mb-4 pt-2">
-                <div class="input-group quantity mr-3" style="width: 130px;">
+                @*<div class="input-group quantity mr-3" style="width: 130px;">
                     <div class="input-group-btn">
                         <button class="btn btn-primary btn-minus">
                             <i class="fa fa-minus"></i>
@@ -53,7 +53,7 @@
                             <i class="fa fa-plus"></i>
                         </button>
                     </div>
-                </div>
+                </div>*@
                 <div>
                     @*<button asp-action="AddToCart" asp-controller="ShoppingCart" asp-route-id="@Model.ProductId" class="btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</button>*@
                     <a asp-action="AddToCart" asp-controller="ShoppingCart" asp-route-id="@Model.ProductId" class="btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</a>
