--- a/StoreFront.UI.MVC/Views/Products/Index.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/Index.cshtml
@@ -157,7 +157,7 @@
                 {
                     <div class="col-lg-4 col-md-6 col-sm-12 pb-1">
                         <div class="card product-item border-0 mb-4">
-                            <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
+                            <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0" style="max-height:300px;">
                                 <a asp-action="Details" asp-route-id="@item.ProductId" class="btn btn-sm text-dark p-0">
                                 <img class="img-fluid w-100" src="~/img/@item.ProductImage" alt=""></a>
                             </div>
