--- a/StoreFront.UI.MVC/Views/Orders/Create.cshtml
+++ b/StoreFront.UI.MVC/Views/Orders/Create.cshtml
@@ -4,49 +4,53 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1 align="center">Create Order</h1>
 
-<h4>Order</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="CustomerId" class="control-label"></label>
-                <select asp-for="CustomerId" class ="form-control" asp-items="ViewBag.CustomerId"></select>
+<div class="row mb-3">
+    <div class="col-md-8 offset-2">
+        <div class="row">
+            <div class="col-md-4">
+                <form asp-action="Create">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="CustomerId" class="control-label"></label>
+                        <select asp-for="CustomerId" class="form-control" asp-items="ViewBag.CustomerId"></select>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="OrderDate" class="control-label"></label>
+                        <input asp-for="OrderDate" class="form-control" />
+                        <span asp-validation-for="OrderDate" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ShipDate" class="control-label"></label>
+                        <input asp-for="ShipDate" class="form-control" />
+                        <span asp-validation-for="ShipDate" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ItemsSold" class="control-label"></label>
+                        <input asp-for="ItemsSold" class="form-control" />
+                        <span asp-validation-for="ItemsSold" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="OrderAmoutTotal" class="control-label"></label>
+                        <input asp-for="OrderAmoutTotal" class="form-control" />
+                        <span asp-validation-for="OrderAmoutTotal" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Create" class="btn btn-primary" />
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="OrderDate" class="control-label"></label>
-                <input asp-for="OrderDate" class="form-control" />
-                <span asp-validation-for="OrderDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ShipDate" class="control-label"></label>
-                <input asp-for="ShipDate" class="form-control" />
-                <span asp-validation-for="ShipDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ItemsSold" class="control-label"></label>
-                <input asp-for="ItemsSold" class="form-control" />
-                <span asp-validation-for="ItemsSold" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="OrderAmoutTotal" class="control-label"></label>
-                <input asp-for="OrderAmoutTotal" class="form-control" />
-                <span asp-validation-for="OrderAmoutTotal" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
+
+        <div>
+            <a asp-action="Index">Back to List</a>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
