--- a/StoreFront.UI.MVC/Views/Orders/Details.cshtml
+++ b/StoreFront.UI.MVC/Views/Orders/Details.cshtml
@@ -1,48 +1,51 @@
 ﻿@model StoreFront.DATA.EF.Models.Order
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Orders";
 }
 
-<h1>Details</h1>
+<h1 align="center">Order Details</h1>
 
-<div>
-    <h4>Order</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OrderDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ShipDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ShipDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ItemsSold)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ItemsSold)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderAmoutTotal)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OrderAmoutTotal)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Customer)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.ShipToFirstName)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.OrderId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class="row mb-3">
+    <div class="col-md-8 offset-2">
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.OrderDate)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.OrderDate)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ShipDate)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.ShipDate)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ItemsSold)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.ItemsSold)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.OrderAmoutTotal)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.OrderAmoutTotal)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Customer)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Customer.ShipToFirstName)
+            </dd>
+        </dl>
+        <a asp-action="Index" class="btn btn-info">Back to Orders</a>
+    </div>
+    <div>
+        @if (User.IsInRole("Admin"))
+        {
+            <a asp-action="Edit" asp-route-id="@Model?.OrderId">Edit</a>
+        }
+    </div>
 </div>
