--- a/StoreFront.UI.MVC/Views/Orders/Index.cshtml
+++ b/StoreFront.UI.MVC/Views/Orders/Index.cshtml
@@ -4,56 +4,73 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1 align="center">Your Orders</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.OrderDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ShipDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ItemsSold)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OrderAmoutTotal)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Customer)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ShipDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ItemsSold)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderAmoutTotal)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Customer.ShipToFirstName)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.OrderId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.OrderId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.OrderId">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+
+<div class="row mb-3">
+    <div class="col-md-8 offset-2">
+        @if (User.IsInRole("Admin"))
+        {
+            <p>
+                <a asp-action="Create">Create New</a>
+            </p>
+        }
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.OrderDate)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ShipDate)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ItemsSold)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.OrderAmoutTotal)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Customer)
+                    </th>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <th></th>
+                    }
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.OrderDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ShipDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ItemsSold)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.OrderAmoutTotal)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Customer.ShipToFirstName )
+                            @Html.DisplayFor(modelItem => item.Customer.ShipToLastName )
+                        </td>
+                        <td>
+                            <a asp-action="Details" asp-route-id="@item.OrderId">Details</a>
+                            @if (User.IsInRole("Admin"))
+                            {
+                                <a asp-action="Edit" asp-route-id="@item.OrderId">Edit</a>
+
+                            }
+                        </td>
+
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
