--- a/StoreFront.UI.MVC/Views/Products/Index.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/Index.cshtml
@@ -1,179 +1,110 @@
-﻿@model IEnumerable<StoreFront.DATA.EF.Models.Product>
+﻿@*@model IEnumerable<StoreFront.DATA.EF.Models.Product>*@
+    @model IPagedList<StoreFront.DATA.EF.Models.Product>
+    @using X.PagedList.Mvc.Core;
+    @using X.PagedList;
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Shop Tile View";
 }
 
 <!-- Shop Start -->
 <div class="container-fluid pt-5">
     <div class="row px-xl-5">
         <!-- Shop Sidebar Start -->
-        <div class="col-lg-3 col-md-12">
+        <div class="col-lg-2 col-md-12">
             <!-- Price Start -->
             <div class="border-bottom mb-4 pb-4">
-                <h5 class="font-weight-semi-bold mb-4">Filter by price</h5>
+                <h5 class="font-weight-semi-bold mb-4">Price</h5>
                 <form>
                     <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                         <input type="checkbox" class="custom-control-input" checked id="price-all">
                         <label class="custom-control-label" for="price-all">All Price</label>
-                        <span class="badge border font-weight-normal">1000</span>
                     </div>
                     <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                         <input type="checkbox" class="custom-control-input" id="price-1">
                         <label class="custom-control-label" for="price-1">$0 - $100</label>
-                        <span class="badge border font-weight-normal">150</span>
                     </div>
                     <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                         <input type="checkbox" class="custom-control-input" id="price-2">
-                        <label class="custom-control-label" for="price-2">$100 - $200</label>
-                        <span class="badge border font-weight-normal">295</span>
+                        <label class="custom-control-label" for="price-2">$100 - $250</label>
                     </div>
                     <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                         <input type="checkbox" class="custom-control-input" id="price-3">
-                        <label class="custom-control-label" for="price-3">$200 - $300</label>
-                        <span class="badge border font-weight-normal">246</span>
+                        <label class="custom-control-label" for="price-3">$250 - $500</label>
                     </div>
                     <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                         <input type="checkbox" class="custom-control-input" id="price-4">
-                        <label class="custom-control-label" for="price-4">$300 - $400</label>
-                        <span class="badge border font-weight-normal">145</span>
+                        <label class="custom-control-label" for="price-4">500 - $1000</label>
                     </div>
                     <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
                         <input type="checkbox" class="custom-control-input" id="price-5">
-                        <label class="custom-control-label" for="price-5">$400 - $500</label>
-                        <span class="badge border font-weight-normal">168</span>
+                        <label class="custom-control-label" for="price-5">$1000 - $2000</label>
                     </div>
                 </form>
             </div>
             <!-- Price End -->
-            <!-- Color Start -->
-            <div class="border-bottom mb-4 pb-4">
-                <h5 class="font-weight-semi-bold mb-4">Filter by color</h5>
-                <form>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" checked id="color-all">
-                        <label class="custom-control-label" for="price-all">All Color</label>
-                        <span class="badge border font-weight-normal">1000</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="color-1">
-                        <label class="custom-control-label" for="color-1">Black</label>
-                        <span class="badge border font-weight-normal">150</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="color-2">
-                        <label class="custom-control-label" for="color-2">White</label>
-                        <span class="badge border font-weight-normal">295</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="color-3">
-                        <label class="custom-control-label" for="color-3">Red</label>
-                        <span class="badge border font-weight-normal">246</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="color-4">
-                        <label class="custom-control-label" for="color-4">Blue</label>
-                        <span class="badge border font-weight-normal">145</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
-                        <input type="checkbox" class="custom-control-input" id="color-5">
-                        <label class="custom-control-label" for="color-5">Green</label>
-                        <span class="badge border font-weight-normal">168</span>
-                    </div>
-                </form>
-            </div>
-            <!-- Color End -->
-            <!-- Size Start -->
-            <div class="mb-5">
-                <h5 class="font-weight-semi-bold mb-4">Filter by size</h5>
-                <form>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" checked id="size-all">
-                        <label class="custom-control-label" for="size-all">All Size</label>
-                        <span class="badge border font-weight-normal">1000</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="size-1">
-                        <label class="custom-control-label" for="size-1">XS</label>
-                        <span class="badge border font-weight-normal">150</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="size-2">
-                        <label class="custom-control-label" for="size-2">S</label>
-                        <span class="badge border font-weight-normal">295</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="size-3">
-                        <label class="custom-control-label" for="size-3">M</label>
-                        <span class="badge border font-weight-normal">246</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="size-4">
-                        <label class="custom-control-label" for="size-4">L</label>
-                        <span class="badge border font-weight-normal">145</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
-                        <input type="checkbox" class="custom-control-input" id="size-5">
-                        <label class="custom-control-label" for="size-5">XL</label>
-                        <span class="badge border font-weight-normal">168</span>
-                    </div>
-                </form>
-            </div>
-            <!-- Size End -->
+            <!-- Manufacturer Start -->
+                <h5 class="font-weight-semi-bold mb-4">Manufacturer</h5>
+            <form asp-action="Index" method="get">                
+                <select name="manufacturerId" onchange="this.form.submit()" class="form-control text-center mb-3" asp-items="ViewBag.ManufacturerId">
+                    <option value="0">[Manufacturer]</option>
+                </select>                
+            </form>
+            <!-- Manufacturer End -->
+           
         </div>
         <!-- Shop Sidebar End -->
         <!-- Shop Product Start -->
         <div class="col-lg-9 col-md-12">
             <div class="row pb-3">
                 <div class="col-12 pb-1">
-                    <div class="d-flex align-items-center justify-content-between mb-4">
-                        <form action="">
+                    <div class="d-flex align-items-center justify-content-start mb-4">
+                        <form asp-action="Index" method="get">
                             <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Search by name">
+                                <input type="text" class="form-control" name="searchTerm" onchange="this.form.submit()" placeholder="Search Products" autocomplete="off" value="@ViewBag.SearchTerm">
+
                                 <div class="input-group-append">
-                                    <span class="input-group-text bg-transparent text-primary">
-                                        <i class="fa fa-search"></i>
+                                    <span class="input-group-text bg-transparent text-primary" >
+                                        <i class="fa fa-search" ></i>                                                                               
                                     </span>
                                 </div>
                             </div>
                         </form>
                         <div>
+                                <a asp-action="Index" asp-route-id=""class="btn btn-info mx-3">Clear Filter</a>
                         </div>
-                        <div class="dropdown ml-4">
-                            <a class="btn border btn-info mr-3" asp-action="TableView">TableView</a>
-                            <button class="btn border dropdown-toggle" type="button" id="triggerId" data-toggle="dropdown" aria-haspopup="true"
-                                    aria-expanded="false">
-                                Sort by
-                            </button>
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="triggerId">
-                                <a class="dropdown-item" href="#">Latest</a>
-                                <a class="dropdown-item" href="#">Popularity</a>
-                                <a class="dropdown-item" href="#">Best Rating</a>
-                            </div>
+                        @if (ViewBag.NbrResults != null)
+                        {
+                            <p class="alert-info p-2 my-0 text-center">
+                                Showing @ViewBag.NbrResults Result@(ViewBag.NbrResults > 1 ? "s" : "") for '@ViewBag.SearchTerm'
+                            </p>
+                        }
+                        <div class="dropdown ml-3" align="right">
+                            <a class="btn btn-link rounded mr-4" asp-action="TableView"><i class="fa-solid fa-list fa-2xl"></i></a>                  
                         </div>
                     </div>
                 </div>
                 @foreach (var item in Model)
                 {
-                    <div class="col-lg-4 col-md-6 col-sm-12 pb-1">
-                        <div class="card product-item border-0 mb-4">
+                    <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
+                        <div class="card product-item border-5 mb-4" style="max-width: 275px">
                             <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0" style="max-height:300px;">
                                 <a asp-action="Details" asp-route-id="@item.ProductId" class="btn btn-sm text-dark p-0">
                                 <img class="img-fluid w-100" src="~/img/@item.ProductImage" alt=""></a>
                             </div>
                             <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-                                <h6 class="text-info mb-3">@item.Manufacturer.ManufacturerName</h6>
-                                <h6 class="text-truncate font-weight-bolder mb-3">@item.ProductName</h6>
+                                <h5 class="text-info mb-3">@item.Manufacturer.ManufacturerName</h5>
+                                <h5 class="text-truncate font-weight-bolder mb-3">@item.ProductName</h5>
                                 <div class="d-flex justify-content-center">
-                                    <h6 class="text-success">@Html.DisplayFor(modelItem => item.ProductPrice)</h6>
+                                    <h5 class="text-success">@Html.DisplayFor(modelItem => item.ProductPrice)</h5>
                                 </div>
                             </div>
                             <div class="card-footer d-flex justify-content-between bg-light border">
-                                <a asp-action="Details" asp-route-id="@item.ProductId" class="btn btn-sm text-dark p-0">
+                                <a asp-action="Details" asp-route-id="@item.ProductId" class="btn btn-sm text-dark p-0" style="font-size: 1.2 rem">
                                     <i class="fas fa-eye text-primary mr-1"></i>View Detail
                                 </a>
 
-                                <a asp-action="AddToCart" asp-controller="ShoppingCart" asp-route-id="@item.ProductId" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
+                                <a asp-action="AddToCart" asp-controller="ShoppingCart" asp-route-id="@item.ProductId" class="btn btn-sm text-dark p-0" style="font-size: 1.2 rem"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
                             </div>
                         </div>
                     </div>
@@ -181,27 +112,14 @@
             </div>
         </div>
     </div>
-    <div class="col-12 pb-1">
-        <nav aria-label="Page navigation">
-            <ul class="pagination justify-content-center mb-3">
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                </li>
-                <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </div>
+        <div class="row mt-5">
+            <div class=" mx-auto text-center">
+                Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+                <div class="w-100">
+                    @Html.PagedListPager(Model, page => Url.Action("Index", new {page, searchTerm = ViewBag.SearchTerm, manufacturerId = ViewBag.ManufacturerId, id = ViewBag.Id}))
+                </div>
+            </div>
+        </div>    
 </div>
 
 
