--- a/StoreFront.UI.MVC/Views/Products/TableView.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/TableView.cshtml
@@ -8,159 +8,25 @@
 
 <!-- Shop Start -->
 <div class="container-fluid pt-5">
-    <div class="row px-xl-5">
-        <!-- Shop Sidebar Start -->
-        <div class="col-lg-3 col-md-12">
-            <!-- Price Start -->
-            <div class="border-bottom mb-4 pb-4">
-                <h5 class="font-weight-semi-bold mb-4">Filter by price</h5>
-                <form>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" checked id="price-all">
-                        <label class="custom-control-label" for="price-all">All Price</label>
-                        <span class="badge border font-weight-normal">1000</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="price-1">
-                        <label class="custom-control-label" for="price-1">$0 - $100</label>
-                        <span class="badge border font-weight-normal">150</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="price-2">
-                        <label class="custom-control-label" for="price-2">$100 - $200</label>
-                        <span class="badge border font-weight-normal">295</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="price-3">
-                        <label class="custom-control-label" for="price-3">$200 - $300</label>
-                        <span class="badge border font-weight-normal">246</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="price-4">
-                        <label class="custom-control-label" for="price-4">$300 - $400</label>
-                        <span class="badge border font-weight-normal">145</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
-                        <input type="checkbox" class="custom-control-input" id="price-5">
-                        <label class="custom-control-label" for="price-5">$400 - $500</label>
-                        <span class="badge border font-weight-normal">168</span>
-                    </div>
-                </form>
-            </div>
-            <!-- Price End -->
-            <!-- Color Start -->
-            <div class="border-bottom mb-4 pb-4">
-                <h5 class="font-weight-semi-bold mb-4">Filter by color</h5>
-                <form>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" checked id="color-all">
-                        <label class="custom-control-label" for="price-all">All Color</label>
-                        <span class="badge border font-weight-normal">1000</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="color-1">
-                        <label class="custom-control-label" for="color-1">Black</label>
-                        <span class="badge border font-weight-normal">150</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="color-2">
-                        <label class="custom-control-label" for="color-2">White</label>
-                        <span class="badge border font-weight-normal">295</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="color-3">
-                        <label class="custom-control-label" for="color-3">Red</label>
-                        <span class="badge border font-weight-normal">246</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="color-4">
-                        <label class="custom-control-label" for="color-4">Blue</label>
-                        <span class="badge border font-weight-normal">145</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
-                        <input type="checkbox" class="custom-control-input" id="color-5">
-                        <label class="custom-control-label" for="color-5">Green</label>
-                        <span class="badge border font-weight-normal">168</span>
-                    </div>
-                </form>
-            </div>
-            <!-- Color End -->
-            <!-- Size Start -->
-            <div class="mb-5">
-                <h5 class="font-weight-semi-bold mb-4">Filter by size</h5>
-                <form>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" checked id="size-all">
-                        <label class="custom-control-label" for="size-all">All Size</label>
-                        <span class="badge border font-weight-normal">1000</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="size-1">
-                        <label class="custom-control-label" for="size-1">XS</label>
-                        <span class="badge border font-weight-normal">150</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="size-2">
-                        <label class="custom-control-label" for="size-2">S</label>
-                        <span class="badge border font-weight-normal">295</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="size-3">
-                        <label class="custom-control-label" for="size-3">M</label>
-                        <span class="badge border font-weight-normal">246</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                        <input type="checkbox" class="custom-control-input" id="size-4">
-                        <label class="custom-control-label" for="size-4">L</label>
-                        <span class="badge border font-weight-normal">145</span>
-                    </div>
-                    <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
-                        <input type="checkbox" class="custom-control-input" id="size-5">
-                        <label class="custom-control-label" for="size-5">XL</label>
-                        <span class="badge border font-weight-normal">168</span>
-                    </div>
-                </form>
-            </div>
-            <!-- Size End -->
-        </div>
-        <!-- Shop Sidebar End -->
+    <div class="row px-xl-5">       
         <!-- Shop Product Start -->
-        <div class="col-lg-9 col-md-12">
+        <div class="offset-2 col-lg-9 col-md-12">
             <div class="row pb-3">
                 <div class="col-12 pb-1">
-                    <div class="d-flex align-items-center justify-content-between mb-4">
-                        <form action="">
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Search by name">
-                                <div class="input-group-append">
-                                    <span class="input-group-text bg-transparent text-primary">
-                                        <i class="fa fa-search"></i>
-                                    </span>
-                                </div>
-                            </div>
-                        </form>
-                        <div>
-                        </div>
-                        <div class="dropdown ml-4">
+                    <div class="d-flex align-items-center justify-content-start mb-4">
+                        
+                        <div >
                             @if (User.IsInRole("Admin"))
                             {
                                 <a class="btn border btn-warning mx-3" asp-action="Create">Add Product</a>
                             }
-                            <a class="btn border btn-info mr-3" asp-action="Index">TileView</a>
-                            <button class="btn border dropdown-toggle" type="button" id="triggerId" data-toggle="dropdown" aria-haspopup="true"
-                                    aria-expanded="false">
-                                Sort by
-                            </button>
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="triggerId">
-                                <a class="dropdown-item" href="#">Latest</a>
-                                <a class="dropdown-item" href="#">Popularity</a>
-                                <a class="dropdown-item" href="#">Best Rating</a>
-                            </div>
+                            <a class="btn border btn-info mr-3" asp-action="Index">Tile View<i class="fa-solid fa-grid-2"></i></a>
+                           
                         </div>
                     </div>
                 </div>
 
-                <table class="table">
+                <table class="table table-striped" style="width: 100%" id="myTable">
                     <thead>
                         <tr>
                             <th>
@@ -188,6 +54,9 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.Manufacturer)
                             </th>
+                            <th>
+                                
+                            </th>
                             @if (User.IsInRole("Admin"))
                             {
                                 <th></th>
@@ -200,7 +69,7 @@
                         {
                             <tr>
                                 <td>
-                                <a asp-action="Details" asp-route-id="@item.ProductId" class="font-weight-bolder">@Html.DisplayFor(modelItem => item.ProductName)</a>
+                                    <a asp-action="Details" asp-route-id="@item.ProductId" class="font-weight-bolder">@Html.DisplayFor(modelItem => item.ProductName)</a>
 
                                 </td>
 
@@ -213,7 +82,6 @@
                                 <td>
                                     @Html.DisplayFor(modelItem => item.UnitsOnOrder)
                                 </td>
-
 
                                 @{
                                     if (User.IsInRole("Admin"))
@@ -233,6 +101,10 @@
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Manufacturer.ManufacturerName)
+                                </td>
+                                <td>
+                                    <a asp-action="AddToCart" asp-controller="ShoppingCart" asp-route-id="@item.ProductId" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
+
                                 </td>
                                 @if (User.IsInRole("Admin"))
                                 {
@@ -258,7 +130,7 @@
             </div>
         </div>
     </div>
-    <div class="col-12 pb-1">
+   @* <div class="col-12 pb-1">
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-center mb-3">
                 <li class="page-item disabled">
@@ -278,88 +150,17 @@
                 </li>
             </ul>
         </nav>
-    </div>
+    </div>*@
 </div>
 
 
 
+    @section Scripts {
+    <script>
+        $(document).ready(function () {
+            $('#myTable').dataTable({
+               
+            });
 
-
-
-
-
-
-
-@*
-    <h1>TableView</h1>
-
-    <p>
-    <a asp-action="Create">Create New</a>
-    </p>
-    <table class="table">
-    <thead>
-    <tr>
-    <th>
-    @Html.DisplayNameFor(model => model.ProductName)
-    </th>
-    <th>
-    @Html.DisplayNameFor(model => model.ProductDescription)
-    </th>
-    <th>
-    @Html.DisplayNameFor(model => model.ProductPrice)
-    </th>
-    <th>
-    @Html.DisplayNameFor(model => model.UnitsInStock)
-    </th>
-    <th>
-    @Html.DisplayNameFor(model => model.UnitsOnOrder)
-    </th>
-    <th>
-    @Html.DisplayNameFor(model => model.Discontinued)
-    </th>
-    <th>
-    @Html.DisplayNameFor(model => model.Category)
-    </th>
-    <th>
-    @Html.DisplayNameFor(model => model.Manufacturer)
-    </th>
-    <th></th>
-    </tr>
-    </thead>
-    <tbody>
-    @foreach (var item in Model) {
-    <tr>
-    <td>
-    @Html.DisplayFor(modelItem => item.ProductName)
-    </td>
-    <td>
-    @Html.DisplayFor(modelItem => item.ProductDescription)
-    </td>
-    <td>
-    @Html.DisplayFor(modelItem => item.ProductPrice)
-    </td>
-    <td>
-    @Html.DisplayFor(modelItem => item.UnitsInStock)
-    </td>
-    <td>
-    @Html.DisplayFor(modelItem => item.UnitsOnOrder)
-    </td>
-    <td>
-    @Html.DisplayFor(modelItem => item.Discontinued)
-    </td>
-    <td>
-    @Html.DisplayFor(modelItem => item.Category.CategoryName)
-    </td>
-    <td>
-    @Html.DisplayFor(modelItem => item.Manufacturer.ManufacturerName)
-    </td>
-    <td>
-    <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> |
-    <a asp-action="Details" asp-route-id="@item.ProductId">Details</a> |
-    <a asp-action="Delete" asp-route-id="@item.ProductId">Delete</a>
-    </td>
-    </tr>
+        });</script>
     }
-    </tbody>
-    </table>
-    *@
