--- a/StoreFront.UI.MVC/wwwroot/css/styleO.css
+++ b/StoreFront.UI.MVC/wwwroot/css/styleO.css
@@ -15,14 +15,14 @@
   --yellow: #ffc107;
   --green: #28a745;
   --teal: #20c997;
-  --cyan: #91C4D9;
+  --cyan: #17a2b8;
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #91C4D9;
+  --primary: #D19C97;
   --secondary: #EDF1FF;
   --success: #28a745;
-  --info: #91C4D9;
+  --info: #17a2b8;
   --warning: #ffc107;
   --danger: #dc3545;
   --light: #FFFFFF;
@@ -152,15 +152,15 @@ sup {
 }
 
 a {
-    color: #91C4D9;
-    text-decoration: none;
-    background-color: transparent;
+  color: #D19C97;
+  text-decoration: none;
+  background-color: transparent;
 }
 
-    a:hover {
-        color: #A8E0CF;
-        text-decoration: underline;
-    }
+a:hover {
+  color: #ba6a62;
+  text-decoration: underline;
+}
 
 a:not([href]):not([class]) {
   color: inherit;
@@ -2364,16 +2364,16 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-    color: #212529;
-    background-color: #91C4D9;
-    border-color: #91C4D9;
+  color: #212529;
+  background-color: #D19C97;
+  border-color: #D19C97;
 }
 
-    .btn-primary:hover {
-        color: #fff;
-        background-color: #91C4D98f;
-        border-color: #91C4D98f;
-    }
+.btn-primary:hover {
+  color: #fff;
+  background-color: #c5837c;
+  border-color: #c17a74;
+}
 
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
@@ -2384,16 +2384,16 @@ fieldset:disabled a.btn {
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #212529;
-  background-color: #91C4D9;
-  border-color: #91C4D9;
+  background-color: #D19C97;
+  border-color: #D19C97;
 }
 
-    .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
-    .show > .btn-primary.dropdown-toggle {
-        color: #fff;
-        background-color: #91C4D9;
-        border-color: #91C4D9;
-    }
+.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
+.show > .btn-primary.dropdown-toggle {
+  color: #fff;
+  background-color: #c17a74;
+  border-color: #bd726b;
+}
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
@@ -2476,8 +2476,8 @@ fieldset:disabled a.btn {
 
 .btn-info {
   color: #fff;
-  background-color: #91C4D9;
-  border-color: #91C4D9;
+  background-color: #17a2b8;
+  border-color: #17a2b8;
 }
 
 .btn-info:hover {
@@ -2495,8 +2495,8 @@ fieldset:disabled a.btn {
 
 .btn-info.disabled, .btn-info:disabled {
   color: #fff;
-  background-color: #91C4D9;
-  border-color: #91C4D9;
+  background-color: #17a2b8;
+  border-color: #17a2b8;
 }
 
 .btn-info:not(:disabled):not(.disabled):active, .btn-info:not(:disabled):not(.disabled).active,
@@ -2660,14 +2660,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #91C4D9;
-  border-color: #91C4D9;
+  color: #D19C97;
+  border-color: #D19C97;
 }
 
 .btn-outline-primary:hover {
   color: #212529;
-  background-color: #91C4D9;
-  border-color: #91C4D9;
+  background-color: #D19C97;
+  border-color: #D19C97;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
@@ -2675,15 +2675,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #91C4D9;
+  color: #D19C97;
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #212529;
-  background-color: #91C4D9;
-  border-color: #91C4D9;
+  background-color: #D19C97;
+  border-color: #D19C97;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
@@ -2756,14 +2756,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-info {
-  color: #91C4D9;
-  border-color: #91C4D9;
+  color: #17a2b8;
+  border-color: #17a2b8;
 }
 
 .btn-outline-info:hover {
   color: #fff;
-  background-color: #91C4D9;
-  border-color: #91C4D9;
+  background-color: #17a2b8;
+  border-color: #17a2b8;
 }
 
 .btn-outline-info:focus, .btn-outline-info.focus {
@@ -2771,15 +2771,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-info.disabled, .btn-outline-info:disabled {
-  color: #91C4D9;
+  color: #17a2b8;
   background-color: transparent;
 }
 
 .btn-outline-info:not(:disabled):not(.disabled):active, .btn-outline-info:not(:disabled):not(.disabled).active,
 .show > .btn-outline-info.dropdown-toggle {
   color: #fff;
-  background-color: #91C4D9;
-  border-color: #91C4D9;
+  background-color: #17a2b8;
+  border-color: #17a2b8;
 }
 
 .btn-outline-info:not(:disabled):not(.disabled):active:focus, .btn-outline-info:not(:disabled):not(.disabled).active:focus,
@@ -2917,14 +2917,14 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #91C4D9;
+  color: #D19C97;
   text-decoration: none;
 }
 
-    .btn-link:hover {
-        color: #A8E0CF;
-        text-decoration: underline;
-    }
+.btn-link:hover {
+  color: #ba6a62;
+  text-decoration: underline;
+}
 
 .btn-link:focus, .btn-link.focus {
   text-decoration: underline;
@@ -3214,7 +3214,7 @@ input[type="button"].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #91C4D9;
+  background-color: #D19C97;
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -3501,11 +3501,11 @@ input[type="button"].btn-block {
   opacity: 0;
 }
 
-    .custom-control-input:checked ~ .custom-control-label::before {
-        color: #fff;
-        border-color: #91C4D9;
-        background-color: #91C4D9;
-    }
+.custom-control-input:checked ~ .custom-control-label::before {
+  color: #fff;
+  border-color: #D19C97;
+  background-color: #D19C97;
+}
 
 .custom-control-input:focus ~ .custom-control-label::before {
   box-shadow: none;
@@ -3564,8 +3564,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #91C4D9;
-  background-color: #91C4D9;
+  border-color: #D19C97;
+  background-color: #D19C97;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -3789,7 +3789,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #91C4D9;
+  background-color: #D19C97;
   border: 0;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   appearance: none;
@@ -3817,7 +3817,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #91C4D9;
+  background-color: #D19C97;
   border: 0;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   appearance: none;
@@ -3848,7 +3848,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #91C4D9;
+  background-color: #D19C97;
   border: 0;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   appearance: none;
@@ -3976,7 +3976,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #91C4D9;
+  background-color: #D19C97;
 }
 
 .nav-fill > .nav-link,
@@ -4582,7 +4582,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #91C4D9;
+  color: #D19C97;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
@@ -4606,10 +4606,10 @@ input[type="button"].btn-block {
 }
 
 .page-item.active .page-link {
-    z-index: 3;
-    color: #fff;
-    background-color: #91C4D9;
-    border-color: #91C4D9;
+  z-index: 3;
+  color: #fff;
+  background-color: #D19C97;
+  border-color: #D19C97;
 }
 
 .page-item.disabled .page-link {
@@ -4670,7 +4670,7 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #212529;
-  background-color: #91C4D9;
+  background-color: #D19C97;
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
@@ -4715,7 +4715,7 @@ a.badge-success:focus, a.badge-success.focus {
 
 .badge-info {
   color: #fff;
-  background-color: #91C4D9;
+  background-color: #17a2b8;
 }
 
 a.badge-info:hover, a.badge-info:focus {
@@ -4971,7 +4971,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #91C4D9;
+  background-color: #D19C97;
   transition: width 0.6s ease;
 }
 
@@ -5047,8 +5047,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #91C4D9;
-  border-color: #91C4D9;
+  background-color: #D19C97;
+  border-color: #D19C97;
 }
 
 .list-group-item + .list-group-item {
@@ -6094,13 +6094,13 @@ a.close.disabled {
 }
 
 .bg-primary {
-    background-color: #91C4D9 !important;
+  background-color: #D19C97 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-    background-color: #117a8b75 !important;
+  background-color: #c17a74 !important;
 }
 
 .bg-secondary {
@@ -6124,7 +6124,7 @@ button.bg-success:focus {
 }
 
 .bg-info {
-  background-color: #91C4D9 !important;
+  background-color: #17a2b8 !important;
 }
 
 a.bg-info:hover, a.bg-info:focus,
@@ -6222,7 +6222,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #91C4D9 !important;
+  border-color: #D19C97 !important;
 }
 
 .border-secondary {
@@ -6234,7 +6234,7 @@ button.bg-dark:focus {
 }
 
 .border-info {
-  border-color: #91C4D9 !important;
+  border-color: #17a2b8 !important;
 }
 
 .border-warning {
@@ -9264,7 +9264,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-    color: #91C4D9 !important;
+  color: #D19C97 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -9288,7 +9288,7 @@ a.text-success:hover, a.text-success:focus {
 }
 
 .text-info {
-  color: #91C4D9 !important;
+  color: #17a2b8 !important;
 }
 
 a.text-info:hover, a.text-info:focus {
@@ -9474,10 +9474,10 @@ a.text-dark:hover, a.text-dark:focus {
   outline: none;
 }
 
-    .navbar-light .navbar-nav .nav-link:hover,
-    .navbar-light .navbar-nav .nav-link.active {
-        color: #91C4D9;
-    }
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link.active {
+  color: #D19C97;
+}
 
 @media (max-width: 991.98px) {
   .navbar-light .navbar-nav .nav-link {
@@ -9556,7 +9556,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .product-item .btn:hover {
-  color: #91C4D9 !important;
+  color: #D19C97 !important;
 }
 
 .contact-form .help-block ul {
@@ -9582,9 +9582,3 @@ a.text-dark:hover, a.text-dark:focus {
     transform: translateY(-15px);
   }
 }
-
-/*img.enlarge:hover {
-    width: 200px;
-    height: 200px;
-}
-*/
